fuck off unused code

--- a/src/pages/aside.f7.html
+++ b/src/pages/aside.f7.html
@@ -96,6 +96,16 @@
                 </ul>
             </li>
             <li class="menu-item">
+                <a href="/manage/accounts/" data-view="#view-main" class="menu-link">
+                    <span class="menu-label">
+                        <span class="menu-name">Quản lý tài khoản</span>
+                    </span>
+                    <span class="menu-icon">
+                        <i class="icon-placeholder mdi mdi-information-outline"></i>
+                    </span>
+                </a>
+            </li>
+            <li class="menu-item">
                 <a href="/about/" data-view="#view-main" class="menu-link">
                     <span class="menu-label">
                         <span class="menu-name">About</span>
