--- a/src/pages/account/change-password.f7.html
+++ b/src/pages/account/change-password.f7.html
@@ -38,7 +38,7 @@
 											<label class="avatar-input">
                                                 <span class="avatar avatar-xl">
                                                   <img
-	                                                  src="http://www.gravatar.com/avatar/${md5(Mext.account['email'])}?s=64"
+	                                                  src="http://www.gravatar.com/avatar/${md5(Clm.account['email'])}?s=64"
 	                                                  alt="..."
 	                                                  class="avatar-img rounded-circle"/>
                                                   <span class="avatar-input-icon rounded-circle">
@@ -81,7 +81,7 @@
 	</div>
 </template>
 <script>
-	import Mext from "../../js/mext";
+	import Clm from "../../js/clm";
 
 	const md5 = require("md5");
 
@@ -108,7 +108,7 @@
 			e.preventDefault();
 			isChangeRequest = true;
 			$update();
-			Mext.api("change_password", {
+			Clm.api("change_password", {
 				old_password: oldPassword,
 				new_password: newPassword,
 				new_password_again: newPasswordAgain
