--- a/src/pages/overview/dashboard.f7.html
+++ b/src/pages/overview/dashboard.f7.html
@@ -223,10 +223,10 @@
 </template>
 
 <script>
-  import Mext from "../../js/mext";
+  import Clm from "../../js/clm";
 
   export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
-    let joinedProjects = Mext.joinedProjects;
+    let joinedProjects = Clm.joinedProjects;
     // Return render function
     return $render;
   }
