--- a/src/pages/books/book-info.f7.html
+++ b/src/pages/books/book-info.f7.html
@@ -59,7 +59,7 @@
 </template>
 
 <script>
-	import Mext from "../../js/mext";
+	import Clm from "../../js/clm";
 
 	export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
 		$on('pageBeforeIn', (e, page) => {
@@ -84,7 +84,7 @@
 				returnMessage = "Chưa điền đủ mục";
 			}
 			else {
-				Mext.api("create_account", {
+				Clm.api("create_account", {
 					fullname: accountName,
 					email: accountEmail,
 					password: password,
