--- a/src/pages/manage/accounts/add.f7.html
+++ b/src/pages/manage/accounts/add.f7.html
@@ -60,7 +60,7 @@
 </template>
 
 <script>
-	import Mext from "../../../js/mext";
+	import Clm from "../../../js/clm";
 
 	export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
 		$on('pageBeforeIn', (e, page) => {
@@ -83,7 +83,7 @@
 				returnMessage = "Chưa điền đủ mục";
 			}
 			else {
-				Mext.api("create_account", {
+				Clm.api("create_account", {
 					fullname: accountName,
 					email: accountEmail,
 					password: password,
