--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -41,7 +41,7 @@
 							<a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
 							   aria-haspopup="true" aria-expanded="false">
 								<div class="avatar avatar-sm avatar-online">
-									<img src="${Mext.isBooted ? avatarUrl : avatarSample}" class="avatar-img rounded-circle bg-dark"/>
+									<img src="${Clm.isBooted ? avatarUrl : avatarSample}" class="avatar-img rounded-circle bg-dark"/>
 								</div>
 							</a>
 							<div class="dropdown-menu dropdown-menu-right">
@@ -119,7 +119,7 @@
 	</div>
 </template>
 <script>
-	import Mext from "./js/mext";
+	import Clm from "./js/clm";
 	const md5 = require("md5");
 
 	export default (props, {$f7, $update}) => {
@@ -128,9 +128,9 @@
 		let avatarUrl = "";
 
 		let waitBootInterval = setInterval(() => {
-			if (Mext.isBooted) {
+			if (Clm.isBooted) {
 				clearInterval(waitBootInterval);
-				account = Mext.account;
+				account = Clm.account;
 				avatarUrl = "http://www.gravatar.com/avatar/" + md5(account['email']) + "?s=64";
 				$update();
 			}
@@ -138,7 +138,7 @@
 
 		const logout = (e) => {
 			e.preventDefault();
-			Mext.api('logout').then(response => {
+			Clm.api('logout').then(response => {
 				localStorage.clear();
 				location.reload();
 			});
@@ -146,7 +146,7 @@
 
 		const confirmDelete = (e) => {
 			let modalID = e.currentTarget.dataset.modalId;
-			Mext.modalDeleteResolver(true);
+			Clm.modalDeleteResolver(true);
 			$(`#${modalID}`).modal('hide');
 		}
 
