--- a/src/pages/login.f7.html
+++ b/src/pages/login.f7.html
@@ -1,57 +1,59 @@
 <template>
-    <div class="page">
-        <div class="page-content">
-            <div class="col-lg-4  bg-white">
-                <div class="row align-items-center m-h-100">
-                    <div class="mx-auto col-md-8">
-                        <div class="p-b-20 text-center">
-                            <p>
-                                <img src="/assets/img/logo.svg" width="80" alt=""/>
-                            </p>
-                            <p class="admin-brand-content">
-                                NorthStudio
-                            </p>
-                        </div>
-                        <h3 class="text-center p-b-20 fw-400">Đăng nhập</h3>
-                        <form class="needs-validation" action="#" method="POST" onsubmit="${submitLogin}">
-                            ${isLoginSent && $h`
-                                <div class="form-row">
-                                    <div class="alert ${loginSuccess?'alert-success':'alert-danger'}" role="alert">
-                                        ${returnMessage}
-                                    </div>
-                                </div>
-                            `}
-                            <div class="form-row">
-                                <div class="form-group floating-label col-md-12">
-                                    <label>Email</label>
-                                    <input @change="${updateEmail}" name="email" type="email" required class="form-control" placeholder="Email"/>
-                                </div>
-                                <div class="form-group floating-label col-md-12">
-                                    <label>Password</label>
-                                    <input @change="${updatePassword}" name="password" type="password" required class="form-control"
-                                           placeholder="Mật khẩu"/>
-                                </div>
-                            </div>
-                            <button value="msc" type="submit" name="login-submit" class="btn btn-primary btn-block btn-lg">
-                                Đăng nhập
-                            </button>
-                        </form>
-                        <p class="text-right p-t-10">
-                            <a href="#" class="text-underline">Quên mật khẩu?</a>
-                        </p>
-                    </div>
-                </div>
+  <div class="page">
+    <div class="page-content">
+      <div class="col-lg-4  bg-white">
+        <div class="row align-items-center m-h-100">
+          <div class="mx-auto col-md-8">
+            <div class="p-b-20 text-center">
+              <p>
+                <img src="/assets/img/logo.svg" width="80" alt=""/>
+              </p>
+              <p class="admin-brand-content">
+                CBH Lib Manager
+              </p>
             </div>
-
-
+            <h3 class="text-center p-b-20 fw-400">Đăng nhập</h3>
+            <form class="needs-validation" action="#" method="POST" onsubmit="${submitLogin}">
+              ${isLoginSent && $h`
+              <div class="form-row">
+                <div class="alert ${loginSuccess?'alert-success':'alert-danger'}" role="alert">
+                  ${returnMessage}
+                </div>
+              </div>
+              `}
+              <div class="form-row">
+                <div class="form-group floating-label col-md-12">
+                  <label>Email</label>
+                  <input @change="${updateEmail}" name="email" type="email" required
+                         class="form-control" placeholder="Email"/>
+                </div>
+                <div class="form-group floating-label col-md-12">
+                  <label>Password</label>
+                  <input @change="${updatePassword}" name="password" type="password" required
+                         class="form-control"
+                         placeholder="Mật khẩu"/>
+                </div>
+              </div>
+              <button value="msc" type="submit" name="login-submit"
+                      class="btn btn-primary btn-block btn-lg">
+                Đăng nhập
+              </button>
+            </form>
+            <p class="text-right p-t-10">
+              <a href="#" class="text-underline">Quên mật khẩu?</a>
+            </p>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </template>
 <script>
 	import Clm from "../js/clm";
+	import Utils from "../js/utils";
 
 	export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
-	    let isLoginSent = false;
+		let isLoginSent = false;
 		let loginSuccess = false;
 		let returnMessage = "";
 
@@ -59,32 +61,36 @@
 		let password = "";
 
 		const updateEmail = (e) => {
-		    email = e.target.value;
-        };
+			email = e.target.value;
+		};
 		const updatePassword = (e) => {
-		    password = e.target.value;
-        };
+			password = e.target.value;
+		};
 
-        const submitLogin = (e) => {
-            e.preventDefault();
-            isLoginSent = true;
-            $update();
-            Clm.login(email, password).then(response => {
-                if (response.status === 200) {
-                    loginSuccess = true;
-                    Utils.setData("isLoggedIn", true);
-                    Utils.setData("account", response.data.account);
-                    Utils.setData("sess_key", response.data['sess_key']);
-                    setTimeout(() => {
-                        location.reload();
-                    }, 3000);
-                }
-                returnMessage = response.message;
-                $update();
-            });
+		const submitLogin = (e) => {
+			e.preventDefault();
+			isLoginSent = true;
+			$update();
+			Clm.api('users/login', {
+				email: email,
+				password: password
+			}).then(response => {
+				console.log(response);
+				if (!response.error) {
+					loginSuccess = true;
+					Utils.setData("is_logged_in", true);
+					Utils.setData("account", response['data']['account']);
+					Utils.setData("sess_key", response['data']['token']);
+					setTimeout(() => {
+						location.reload();
+					}, 3000);
+				}
+				returnMessage = response.message;
+				$update();
+			});
 
-            return false;
-        }
+			return false;
+		}
 
 		return $render;
 	}
