--- a/src/pages/overview/dashboard.f7.html
+++ b/src/pages/overview/dashboard.f7.html
@@ -226,7 +226,7 @@
   import Clm from "../../js/clm";
 
   export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
-    let joinedProjects = Clm.joinedProjects;
+    let joinedProjects = [];
     // Return render function
     return $render;
   }
