--- a/src/pages/books/book-info.f7.html
+++ b/src/pages/books/book-info.f7.html
@@ -1,103 +1,66 @@
 <template>
-    <div class="page">
-        <div class="page-content">
-            <section class="admin-content">
-                <div class="container py-5">
-                    <div class="card m-b-30">
-                        <div class="card-header">
-                            <h5 class="m-b-0">
-                                Thông tin sách
-                            </h5>
-                        </div>
-                        <form action="#" method="POST" onsubmit="${submitCreation}">
-                            <div class="card-body">
-                                ${isSubmitSent && $h`
-                                <div class="form-group">
-                                    <div class="alert ${addSuccess?'alert-success':'alert-danger'}" role="alert">
-                                        ${returnMessage}
-                                    </div>
-                                </div>
-                                `}
-
-                                <div class="table-responsive">
-                                    <table class="table table-hover ">
-                                        <thead>
-                                        <tr>
-                                            <th>ID</th>
-                                            <th>Tên sách</th>
-                                            <th>Tác giả</th>
-                                            <th>Mã sách</th>
-                                            <th>Vị trí</th>
-                                            <th>Giá tiền</th>
-                                            <th>Ngày nhập</th>
-                                            <th>Người nhập</th>
-                                            <th>Tình trạng</th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>Còn chút gì để nhớ</td>
-                                            <td>Nguyễn Nhật Ánh</td>
-                                            <td>CBH-206</td>
-                                            <td>T1-N2</td>
-                                            <td>60000 đ</td>
-                                            <td>20/06/2021</td>
-                                            <td>Bảo</td>
-                                            <td>Đã mượn</td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </section>
+  <div class="page">
+    <div class="page-content">
+      <section class="admin-content">
+        <div class="container py-5">
+          <div class="card m-b-30">
+            <div class="card-header">
+              <h5 class="m-b-0">
+                Thông tin sách
+              </h5>
+            </div>
+            <div class="card-body">
+              <div class="table-responsive">
+                <table class="table table-hover ">
+                  <thead>
+                  <tr>
+                    <th>Tên sách</th>
+                    <th>Tác giả</th>
+                    <th>Mã sách</th>
+                    <th>Vị trí</th>
+                    <th>Giá tiền</th>
+                    <th>Ngày nhập</th>
+                    <th>Người nhập</th>
+                    <th>Tình trạng</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr>
+                    <td>${book.name}</td>
+                    <td>${book.author}</td>
+                    <td>${book.code}</td>
+                    <td>${book.location}</td>
+                    <td>${book.cost}</td>
+                    <td>${book.imported_date}</td>
+                    <td>${book.responsible_person}</td>
+                    <td>${book.is_borrowed === true ? "Đã mượn" : "Chưa mượn"}</td>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
         </div>
+      </section>
     </div>
+  </div>
 </template>
 
 <script>
 	import Clm from "../../js/clm";
 
 	export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
-		$on('pageBeforeIn', (e, page) => {
-			window.$(".js-select2").select2();
-			window.$('.datedropper').dateDropper();
+		const bookCode = props.bookCode;
+		console.log(bookCode);
+		let book = {};
+
+		Clm.api("books/" + bookCode).then(response => {
+			console.log(response);
+			book = response.data.book_details;
+			$update();
 		});
 
-		let isSubmitSent = false;
-		let addSuccess = false;
-		let returnMessage = "";
-		let selectDate = "";
 
-		const submitCreation = function (e) {
-			e.preventDefault();
-			isSubmitSent = true;
-			let accountName = document.getElementById("accountName").value;
-			let accountEmail = document.getElementById("accountEmail").value;
-			let role = document.getElementById("role").value;
-			let password = Math.random().toString(36).slice(-8);
-
-			if (!accountName || !accountEmail || !role) {
-				returnMessage = "Chưa điền đủ mục";
-			}
-			else {
-				Clm.api("create_account", {
-					fullname: accountName,
-					email: accountEmail,
-					password: password,
-					role: role
-				}).then(response => {
-					console.log(response);
-					addSuccess = response.status;
-					returnMessage = response.message;
-
-					$update();
-				});
-			}
-		}
 		return $render;
 	}
 </script>
