--- a/src/pages/borrowers/list-borrowers.f7.html
+++ b/src/pages/borrowers/list-borrowers.f7.html
@@ -1,72 +1,71 @@
 <template>
-    <div class="page">
-        <div class="page-content">
-            <section class="admin-content">
-                <div class="container py-5">
-                    <div class="col-md-15">
-                        <div class="card m-b-30">
-                            <div class="card-header">
-                                <h5 class="m-b-0">
-                                    Tất cả người mượn
-                                </h5>
-                                <div class="card-controls">
-                                    <a href="/borrowers/add/" class="btn btn-info">Thêm người mượn</a>
-                                </div>
-                            </div>
-                            <div class="card-body">
-                                <div class="table-responsive">
-                                    <table class="table table-hover ">
-                                        <thead>
-                                        <tr>
-                                            <th>ID</th>
-                                            <th>Tên</th>
-                                            <th>Lớp</th>
-                                            <th>Mã học sinh</th>
-                                            <th>Điện thoại</th>
-                                            <th>Số sách</th>
-                                            <th>Ngày mượn</th>
-                                            <th>Ngày hết hạn</th>
-                                            <th>Phụ trách</th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>Nguyễn Duy Bảo</td>
-                                            <td>12 Tin</td>
-                                            <td>180045Ti</td>
-                                            <td>0123456789</td>
-                                            <td>2</td>
-                                            <td>20/06/2021</td>
-                                            <td>27/06/2021</td>
-                                            <td>Bảo</td>
-                                            <td>
-                                                <a href="/borrowers/info/1/" class="btn btn-info projects" role="button">
-                                                    <i class="mdi mdi-menu"></i>
-                                                </a>
-                                            </td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
+  <div class="page">
+    <div class="page-content">
+      <section class="admin-content">
+        <div class="container py-5">
+          <div class="col-md-15">
+            <div class="card m-b-30">
+              <div class="card-header">
+                <h5 class="m-b-0">
+                  Tất cả người mượn
+                </h5>
+                <div class="card-controls">
+                  <a href="/borrowers/add/" class="btn btn-info">Thêm người mượn</a>
                 </div>
-            </section>
+              </div>
+              <div class="card-body">
+                <div class="table-responsive">
+                  <table class="table table-hover ">
+                    <thead>
+                    <tr>
+                      <th>ID</th>
+                      <th>Tên</th>
+                      <th>Lớp</th>
+                      <th>Mã học sinh</th>
+                      <th>Điện thoại</th>
+                      <th>Email</th>
+                      <th>Số sách</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    ${borrowers.map((borrower, i) => $h`
+                      <tr>
+                        <td>${i + 1}</td>
+                        <td>${borrower.name}</td>
+                        <td>${borrower.class}</td>
+                        <td>${borrower.student_code}</td>
+                        <td>${borrower.phone_number}</td>
+                        <td>${borrower.email}</td>
+                        <td>${borrower.current_borrowed_books.length}</td>
+                        <td>
+                          <a href="/borrowers/info/${borrower.code}/" class="btn btn-info projects" role="button">
+                            <i class="mdi mdi-menu"></i>
+                          </a>
+                        </td>
+                      </tr>
+                    `)}
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+
+            </div>
+          </div>
         </div>
+      </section>
     </div>
+  </div>
 </template>
 <script>
 	import Clm from "../../js/clm";
 
 	export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
-		let allProjects = [];
+		let borrowers = [];
 
 		const resetList = (e) => {
-			Clm.api("get_all_projects").then(response => {
-				allProjects = response.data;
+			Clm.api("borrowers/all").then(response => {
+				console.log(response);
+				borrowers = response.data.list_borrowers;
 				$update();
 			});
 		}
