--- a/src/pages/borrowers/add-borrower.f7.html
+++ b/src/pages/borrowers/add-borrower.f7.html
@@ -74,7 +74,7 @@
                                                 <td>Bảo</td>
                                                 <td>
                                                     <button @click="${deleteProject}" type="button"
-                                                            class="btn btn-danger"
+                                                            class="btn btn-danger btn-sm"
                                                             data-toggle="modal" data-target="#deleteProject"
                                                             data-id="1">
                                                         <i class="mdi mdi-delete"></i>
