--- a/src/pages/borrowers/list-borrowers.f7.html
+++ b/src/pages/borrowers/list-borrowers.f7.html
@@ -38,7 +38,7 @@
                         <td>${borrower.email}</td>
                         <td>${borrower.current_borrowed_books.length}</td>
                         <td>
-                          <a href="/borrowers/info/${borrower.code}/" class="btn btn-info projects" role="button">
+                          <a href="/borrowers/info/${borrower.student_code}/" class="btn btn-primary btn-sm" role="button">
                             <i class="mdi mdi-menu"></i>
                           </a>
                         </td>
