--- a/src/pages/borrowers/borrower-info.f7.html
+++ b/src/pages/borrowers/borrower-info.f7.html
@@ -1,124 +1,127 @@
 <template>
-    <div class="page">
-        <div class="page-content">
-            <section class="admin-content">
-                <div class="container py-5">
-                    <div class="card m-b-30">
-                        <div class="card-header">
-                            <h5 class="m-b-0">
-                                Thông tin người mượn
-                            </h5>
-                        </div>
-                        <form action="#" method="POST" onsubmit="${submitCreation}">
-                            <div class="card-body">
-                                ${isSubmitSent && $h`
-                                <div class="form-group">
-                                    <div class="alert ${addSuccess?'alert-success':'alert-danger'}" role="alert">
-                                        ${returnMessage}
-                                    </div>
-                                </div>
-                                `}
-                                <div class="form-group">
-                                    <label for="accountName">Họ và tên</label>
-                                    <input type="text" class="form-control" id="accountName" name="account-name"
-                                           placeholder="Nhập họ và tên..." value="Nguyễn Duy Bảo"/>
-                                </div>
-                                <div class="form-group">
-                                    <label for="select-class">Lớp</label>
-                                    <select class="form-control" name="account-role" id="select-class">
-                                        <option value="">Chọn lớp...</option>
-                                        <option value="10ti">10 Tin</option>
-                                        <option value="11ti">11 Tin</option>
-                                        <option selected value="12ti">12 Tin</option>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label for="accountName">Mã học sinh</label>
-                                    <input type="text" class="form-control" id="accountName" name="account-name"
-                                           placeholder="Nhập mã học sinh..." value="180045Ti"/>
-                                </div>
-                                <div class="form-group">
-                                    <label for="accountName">Email</label>
-                                    <input type="text" class="form-control" id="accountName" name="account-name"
-                                           placeholder="Nhập email..." value="jayremntb@gmail.com"/>
-                                </div>
-                                <div class="form-group">
-                                    <label for="accountName">Số điện thoại</label>
-                                    <input type="text" class="form-control" id="accountName" name="account-name"
-                                           placeholder="Nhập email..." value="0123456789"/>
-                                </div>
-                                <div class="form-group">
-                                    <label for="accountName">Thêm sách</label>
-                                    <input type="text" class="form-control" id="accountName" name="account-name"
-                                           placeholder="Nhập mã sách..."/>
-                                </div>
-                                <div class="form-group">
-                                    <label for="accountName">Sách mượn</label>
-                                    <div class="table-responsive">
-                                        <table class="table table-hover ">
-                                            <thead>
-                                            <tr>
-                                                <th>Tên sách</th>
-                                                <th>Tác giả</th>
-                                                <th>Mã sách</th>
-                                                <th>Vị trí</th>
-                                                <th>Ngày mượn</th>
-                                                <th>Hết hạn</th>
-                                                <th>Gia hạn</th>
-                                                <th>Phụ trách</th>
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            <tr>
-                                                <td>Còn chút gì để nhớ</td>
-                                                <td>Nguyễn Nhật Ánh</td>
-                                                <td>CBH-206</td>
-                                                <td>T1-N2</td>
-                                                <td>20/06/2021</td>
-                                                <td>27/06/2021</td>
-                                                <td>2</td>
-                                                <td>Bảo</td>
-                                                <td>
-                                                    <a href="/books/info/1/" class="btn btn-projects" role="button">
-                                                        <i class="mdi mdi-menu"></i>
-                                                    </a>
-                                                    <button @click="${deleteProject}" type="button"
-                                                            class="btn btn-warning"
-                                                            data-toggle="modal" data-target="#deleteProject"
-                                                            data-id="1">
-                                                        <i class="mdi mdi-update"></i>
-                                                    </button>
-                                                    <button @click="${deleteProject}" type="button"
-                                                            class="btn btn-success"
-                                                            data-toggle="modal" data-target="#deleteProject"
-                                                            data-id="1">
-                                                        <i class="mdi mdi-check"></i>
-                                                    </button>
-
-                                                </td>
-                                            </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <button type="submit" name="create-project" value="ok" class="btn btn-success">
-                                        Trả sách
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
+  <div class="page">
+    <div class="page-content">
+      <section class="admin-content">
+        <div class="container py-5">
+          <div class="card m-b-30">
+            <div class="card-header">
+              <h5 class="m-b-0">
+                Thông tin người mượn
+              </h5>
+            </div>
+            <form action="#" method="POST" onsubmit="${submitCreation}">
+              <div class="card-body">
+                ${isSubmitSent && $h`
+                <div class="form-group">
+                  <div class="alert ${addSuccess?'alert-success':'alert-danger'}" role="alert">
+                    ${returnMessage}
+                  </div>
                 </div>
-            </section>
+                `}
+                <div class="form-group">
+                  <label for="input-name">Họ và tên</label>
+                  <input type="text" class="form-control" id="input-name" name="account-name"
+                         placeholder="Nhập họ và tên..." value="${borrowerInfo.name}"/>
+                </div>
+                <div class="form-group">
+                  <label for="input-class">Lớp</label>
+                  <input type="text" class="form-control" id="input-class" name="account-name"
+                         placeholder="Chọn lớp" value="${borrowerInfo.class}"/>
+                </div>
+                <div class="form-group">
+                  <label for="input-student-code">Mã học sinh</label>
+                  <input type="text" class="form-control" id="input-student-code" name="account-name"
+                         placeholder="Nhập mã học sinh..." value="${borrowerInfo.student_code}"/>
+                </div>
+                <div class="form-group">
+                  <label for="input-email">Email</label>
+                  <input type="text" class="form-control" id="input-email" name="account-name"
+                         placeholder="Nhập email..." value="${borrowerInfo.email}"/>
+                </div>
+                <div class="form-group">
+                  <label for="input-phone-number">Số điện thoại</label>
+                  <input type="text" class="form-control" id="input-phone-number" name="account-name"
+                         placeholder="Nhập số điện thoại..." value="${borrowerInfo.phone_number}"/>
+                </div>
+                <div class="form-group">
+                  <label for="input-book">Thêm sách</label>
+                  <input type="text" class="form-control" id="input-book" name="account-name"
+                         placeholder="Nhập mã sách..."/>
+                </div>
+                <div class="form-group">
+                  <label for="">Sách mượn</label>
+                  <div class="table-responsive">
+                    <table class="table table-hover ">
+                      <thead>
+                      <tr>
+                        <th>Tên sách</th>
+                        <th>Tác giả</th>
+                        <th>Mã sách</th>
+                        <th>Vị trí</th>
+                        <th>Ngày mượn</th>
+                        <th>Hết hạn</th>
+                        <th>Gia hạn</th>
+                        <th>Phụ trách</th>
+                      </tr>
+                      </thead>
+                      <tbody>
+                      ${borrowedBooks.map(book => $h`
+                        <tr>
+                          <td>${book.name}</td>
+                          <td>${book.author}</td>
+                          <td>${book.code}</td>
+                          <td>${book.location}</td>
+                          <td>${book.borrowed_date}</td>
+                          <td>${book.expired_date}</td>
+                          <td>${book.extended_times}</td>
+                          <td>${book.responsible_person}</td>
+                          <td>
+                            <a href="/books/info/${book.code}/" class="btn btn-projects" role="button">
+                              <i class="mdi mdi-menu"></i>
+                            </a>
+                            <button @click="${deleteProject}" type="button"
+                                    class="btn btn-warning btn-sm"
+                                    data-toggle="modal" data-target="#deleteProject"
+                                    data-id="1">
+                              <i class="mdi mdi-update"></i>
+                            </button>
+                            <button @click="${deleteProject}" type="button"
+                                    class="btn btn-success btn-sm"
+                                    data-toggle="modal" data-target="#deleteProject"
+                                    data-id="1">
+                              <i class="mdi mdi-check"></i>
+                            </button>
+
+                          </td>
+                        </tr>
+                      `)}
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <button type="submit" name="create-project" value="ok" class="btn btn-success">
+                    Trả sách
+                  </button>
+                </div>
+                <div class="form-group">
+                  <button type="submit" name="create-project" value="ok" class="btn btn-success">
+                    Cập nhật
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
+      </section>
     </div>
+  </div>
 </template>
 
 <script>
 	import Clm from "../../js/clm";
 
-	export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
+	export default async function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
 		$on('pageBeforeIn', (e, page) => {
 			window.$(".js-select2").select2();
 			window.$('.datedropper').dateDropper();
@@ -128,6 +131,15 @@
 		let addSuccess = false;
 		let returnMessage = "";
 		let selectDate = "";
+		let borrowerInfo = {};
+		let borrowedBooks = [];
+
+		Clm.api(`borrowers/${props.borrowerCode}/`).then(response => {
+			console.log(response);
+      borrowerInfo = response.data.borrower_info;
+      borrowedBooks = borrowerInfo.current_borrowed_books;
+      $update();
+    });
 
 		const submitCreation = function (e) {
 			e.preventDefault();
