--- a/src/pages/books/add-book.f7.html
+++ b/src/pages/books/add-book.f7.html
@@ -1,109 +1,114 @@
 <template>
-  <div class="page">
-    <div class="page-content">
-      <section class="admin-content">
-        <div class="container py-5">
-          <div class="card m-b-30">
-            <div class="card-header">
-              <h5 class="m-b-0">
-                Thêm sách
-              </h5>
-            </div>
-            <form action="#" method="POST" onsubmit="${submitCreation}">
-              <div class="card-body">
-                ${isSubmitSent && $h`
-                  <div class="form-group">
-                    <div class="alert ${addSuccess ? 'alert-success' : 'alert-danger'}" role="alert">
-                      ${returnMessage}
+    <div class="page">
+        <div class="page-content">
+            <section class="admin-content">
+                <div class="container py-5">
+                    <div class="card m-b-30">
+                        <div class="card-header">
+                            <h5 class="m-b-0">
+                                Thêm sách
+                            </h5>
+                        </div>
+                        <form action="#" method="POST" onsubmit="${submitCreation}">
+                            <div class="card-body">
+                                ${isSubmitSent && $h`
+                                <div class="form-group">
+                                    <div class="alert ${addSuccess ? 'alert-success' : 'alert-danger'}" role="alert">
+                                        ${returnMessage}
+                                    </div>
+                                </div>
+                                `}
+                                <div class="form-group">
+                                    <label for="book-name">Tên sách</label>
+                                    <input type="text" class="form-control" id="book-name"
+                                           placeholder="Nhập tên sách..."/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="book-author">Tác giả</label>
+                                    <input type="text" class="form-control" id="book-author"
+                                           placeholder="Nhập tác giả..."/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="book-code">Mã sách</label>
+                                    <input type="text" class="form-control" id="book-code"
+                                           placeholder="Nhập mã sách..."/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="book-cost">Giá tiền</label>
+                                    <input type="text" class="form-control" id="book-cost"
+                                           placeholder="Nhập giá tiền..."/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="book-location">Vị trí</label>
+                                    <input type="text" class="form-control" id="book-location"
+                                           placeholder="Nhập vị trí..."/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="book-imported-date">Ngày nhập</label>
+                                    <input class="form-control datedropper" type="text" id="book-imported-date"/>
+                                </div>
+                                <div class="form-group">
+                                    <button type="submit" name="create-project" value="ok" class="btn btn-primary">
+                                        Thêm
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                  </div>
-                `}
-                <div class="form-group">
-                  <label for="book-name">Tên sách</label>
-                  <input type="text" class="form-control" id="book-name" placeholder="Nhập tên sách..."/>
                 </div>
-                <div class="form-group">
-                  <label for="book-author">Tác giả</label>
-                  <input type="text" class="form-control" id="book-author" placeholder="Nhập tác giả..."/>
-                </div>
-                <div class="form-group">
-                  <label for="book-code">Mã sách</label>
-                  <input type="text" class="form-control" id="book-code" placeholder="Nhập mã sách..."/>
-                </div>
-                <div class="form-group">
-                  <label for="book-cost">Giá tiền</label>
-                  <input type="text" class="form-control" id="book-cost" placeholder="Nhập giá tiền..."/>
-                </div>
-                <div class="form-group">
-                  <label for="book-location">Vị trí</label>
-                  <input type="text" class="form-control" id="book-location" placeholder="Nhập vị trí..."/>
-                </div>
-                <div class="form-group">
-                  <label for="book-imported-date">Ngày nhập</label>
-                  <input class="form-control datedropper" type="text" id="book-imported-date"/>
-                </div>
-                <div class="form-group">
-                  <button type="submit" name="create-project" value="ok" class="btn btn-primary">
-                    Thêm
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
+            </section>
         </div>
-      </section>
     </div>
-  </div>
 </template>
 
 <script>
-	import Clm from "../../js/clm";
+    import Clm from "../../js/clm";
 
-	export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
-		$on('pageBeforeIn', (e, page) => {
-			window.$(".js-select2").select2();
-			window.$('.datedropper').dateDropper();
-		});
+    export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
+        $on('pageBeforeIn', (e, page) => {
+            window.$(".js-select2").select2();
+            window.$('.datedropper').dateDropper();
+        });
 
-		let isSubmitSent = false;
-		let addSuccess = false;
-		let returnMessage = "";
-		const date = new Date();
+        let isSubmitSent = false;
+        let addSuccess = false;
+        let returnMessage = "";
+        const date = new Date();
 
-		const submitCreation = function (e) {
-			e.preventDefault();
-			isSubmitSent = true;
-			let bookName = document.getElementById("book-name").value;
-			let bookCode = document.getElementById("book-code").value;
-			let bookCost = document.getElementById("book-cost").value;
-			let bookAuthor = document.getElementById("book-author").value;
-			let bookLocation = document.getElementById("book-location").value;
-			let bookImportedDate = document.getElementById("book-imported-date").value;
-			console.log(bookImportedDate);
+        const submitCreation = async function (e) {
+            e.preventDefault();
+            isSubmitSent = true;
+            let bookName = document.getElementById("book-name").value;
+            let bookCode = document.getElementById("book-code").value;
+            let bookCost = document.getElementById("book-cost").value;
+            let bookAuthor = document.getElementById("book-author").value;
+            let bookLocation = document.getElementById("book-location").value;
+            let bookImportedDate = document.getElementById("book-imported-date").value;
 
-			if (!bookName || !bookCode || !bookImportedDate) {
-				returnMessage = "Chưa điền đủ mục";
-				$update();
-			}
-			else {
-				Clm.api("books/add", {
-					name: bookName,
-          code: bookCode,
-          author: bookAuthor,
-          location: bookLocation,
-          cost: bookCost,
-          imported_date: bookImportedDate,
-          responsible_person: Clm.account.name,
-          is_borrowed: false,
-          borrower: ""
-        }).then(response => {
-					console.log(response);
-					addSuccess = !response.error;
-					returnMessage = response.message;
-					$update();
-				});
-			}
-		}
-		return $render;
-	}
+            if (!bookName || !bookCode || !bookImportedDate) {
+                returnMessage = "Chưa điền đủ mục";
+                $update();
+            } else {
+                let json = {
+                    name: bookName,
+                    code: bookCode,
+                    author: bookAuthor,
+                    location: bookLocation,
+                    cost: bookCost,
+                    imported_time: new Date(bookImportedDate).getTime(),
+                    responsible_person: Clm.account.name,
+                    is_borrowed: false,
+                    borrower: ""
+                };
+                console.log(json);
+                Clm.api("books/add", json).then(response => {
+                    console.log(response);
+                    addSuccess = !response.error;
+                    returnMessage = response.message;
+                    $update();
+                });
+            }
+        }
+        return $render;
+    }
 </script>
