--- a/src/pages/books/list-books.f7.html
+++ b/src/pages/books/list-books.f7.html
@@ -27,6 +27,7 @@
                       <th>Ngày nhập</th>
                       <th>Người nhập</th>
                       <th>Tình trạng</th>
+                      <th>Hành động</th>
                     </tr>
                     </thead>
                     <tbody>
