--- a/src/pages/books/book-info.f7.html
+++ b/src/pages/books/book-info.f7.html
@@ -32,7 +32,7 @@
                     <td>${book.code}</td>
                     <td>${book.location}</td>
                     <td>${book.cost}</td>
-                    <td>${book.imported_date}</td>
+                    <td>${Clm.timeConverter(book.imported_time)}</td>
                     <td>${book.responsible_person}</td>
                     <td>${book.is_borrowed === true ? "Đã mượn" : "Chưa mượn"}</td>
                     <td>
