--- a/src/pages/books/book-info.f7.html
+++ b/src/pages/books/book-info.f7.html
@@ -33,7 +33,7 @@
                     <td>${book.location}</td>
                     <td>${book.cost}</td>
                     <td>${Clm.timeConverter(book.imported_time)}</td>
-                    <td>${book.responsible_person}</td>
+                    <td>${book.responsible_person.name}</td>
                     <td>${book.is_borrowed === true ? "Đã mượn" : "Chưa mượn"}</td>
                     <td>
                       <a href="/borrowers/info/${book.borrower}/" class="btn btn-primary btn-sm" role="button">
@@ -61,7 +61,9 @@
 	export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
 		const bookCode = props.bookCode;
 		console.log(bookCode);
-		let book = {};
+		let book = {
+			responsible_person: {}
+    };
 
 		Clm.api("books/" + bookCode).then(response => {
 			console.log(response);
