--- a/src/pages/borrowers/borrower-info.f7.html
+++ b/src/pages/borrowers/borrower-info.f7.html
@@ -1,180 +1,264 @@
 <template>
-    <div class="page">
-        <div class="page-content">
-            <section class="admin-content">
-                <div class="container py-5">
-                    <div class="card m-b-30">
-                        <div class="card-header">
-                            <h5 class="m-b-0">
-                                Thông tin người mượn
-                            </h5>
-                        </div>
-                        <form action="#" method="POST" onsubmit="${submitCreation}">
-                            <div class="card-body">
-                                ${isSubmitSent && $h`
-                                <div class="form-group">
-                                    <div class="alert ${addSuccess?'alert-success':'alert-danger'}" role="alert">
-                                        ${returnMessage}
-                                    </div>
-                                </div>
-                                `}
-                                <div class="form-group">
-                                    <label for="input-name">Họ và tên</label>
-                                    <input type="text" class="form-control" id="input-name" name="account-name"
-                                           placeholder="Nhập họ và tên..." value="${borrowerInfo.name}"/>
-                                </div>
-                                <div class="form-group">
-                                    <label for="input-class">Lớp</label>
-                                    <input type="text" class="form-control" id="input-class" name="account-name"
-                                           placeholder="Chọn lớp" value="${borrowerInfo.class}"/>
-                                </div>
-                                <div class="form-group">
-                                    <label for="input-student-code">Mã học sinh</label>
-                                    <input type="text" class="form-control" id="input-student-code" name="account-name"
-                                           placeholder="Nhập mã học sinh..." value="${borrowerInfo.student_code}"/>
-                                </div>
-                                <div class="form-group">
-                                    <label for="input-email">Email</label>
-                                    <input type="text" class="form-control" id="input-email" name="account-name"
-                                           placeholder="Nhập email..." value="${borrowerInfo.email}"/>
-                                </div>
-                                <div class="form-group">
-                                    <label for="input-phone-number">Số điện thoại</label>
-                                    <input type="text" class="form-control" id="input-phone-number" name="account-name"
-                                           placeholder="Nhập số điện thoại..." value="${borrowerInfo.phone_number}"/>
-                                </div>
-                                <div class="form-group">
-                                    <label for="input-book">Thêm sách</label>
-                                    <input type="text" class="form-control" id="input-book" name="account-name"
-                                           placeholder="Nhập mã sách..."/>
-                                </div>
-                                <div class="form-group">
-                                    <label for="">Sách mượn</label>
-                                    <div class="table-responsive">
-                                        <table class="table table-hover ">
-                                            <thead>
-                                            <tr>
-                                                <th>Tên sách</th>
-                                                <th>Tác giả</th>
-                                                <th>Mã sách</th>
-                                                <th>Vị trí</th>
-                                                <th>Ngày mượn</th>
-                                                <th>Hết hạn</th>
-                                                <th>Gia hạn</th>
-                                                <th>Phụ trách</th>
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            ${borrowedBooks.map(book => $h`
-                                            <tr>
-                                                <td>${book.name}</td>
-                                                <td>${book.author}</td>
-                                                <td>${book.code}</td>
-                                                <td>${book.location}</td>
-                                                <td>${book.borrowed_date}</td>
-                                                <td>${book.expired_date}</td>
-                                                <td>${book.extended_times}</td>
-                                                <td>${book.responsible_person}</td>
-                                                <td>
-                                                    <a href="/books/info/${book.code}/" class="btn btn-projects"
-                                                       role="button">
-                                                        <i class="mdi mdi-menu"></i>
-                                                    </a>
-                                                    <button @click="${deleteProject}" type="button"
-                                                            class="btn btn-warning btn-sm"
-                                                            data-toggle="modal" data-target="#deleteProject"
-                                                            data-id="1">
-                                                        <i class="mdi mdi-update"></i>
-                                                    </button>
-                                                    <button @click="${deleteProject}" type="button"
-                                                            class="btn btn-success btn-sm"
-                                                            data-toggle="modal" data-target="#deleteProject"
-                                                            data-id="1">
-                                                        <i class="mdi mdi-check"></i>
-                                                    </button>
-
-                                                </td>
-                                            </tr>
-                                            `)}
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <button type="submit" name="create-project" value="ok" class="btn btn-success">
-                                        Trả sách
-                                    </button>
-                                </div>
-                                <div class="form-group">
-                                    <button type="submit" name="create-project" value="ok" class="btn btn-success">
-                                        Cập nhật
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
+  <div class="page">
+    <div class="page-content">
+      <section class="admin-content">
+        <div class="container py-5">
+          <div class="card m-b-30">
+            <div class="card-header">
+              <h5 class="m-b-0">
+                Thông tin người mượn
+              </h5>
+            </div>
+            <form action="#" method="POST" onsubmit="${submitCreation}">
+              <div class="card-body">
+                ${isSubmitSent && $h`
+                <div class="form-group">
+                  <div class="alert ${addSuccess?'alert-success':'alert-danger'}" role="alert">
+                    ${returnMessage}
+                  </div>
                 </div>
-            </section>
+                `}
+                <div class="form-group">
+                  <label for="input-name">Họ và tên</label>
+                  <input type="text" class="form-control" id="input-name" name="account-name"
+                         placeholder="Nhập họ và tên..." value="${borrowerInfo.name}"/>
+                </div>
+                <div class="form-group">
+                  <label for="input-class">Lớp</label>
+                  <input type="text" class="form-control" id="input-class" name="account-name"
+                         placeholder="Chọn lớp" value="${borrowerInfo.class}"/>
+                </div>
+                <div class="form-group">
+                  <label for="input-student-code">Mã học sinh</label>
+                  <input type="text" class="form-control" id="input-student-code" name="account-name"
+                         placeholder="Nhập mã học sinh..." value="${borrowerInfo.student_code}"/>
+                </div>
+                <div class="form-group">
+                  <label for="input-email">Email</label>
+                  <input type="text" class="form-control" id="input-email" name="account-name"
+                         placeholder="Nhập email..." value="${borrowerInfo.email}"/>
+                </div>
+                <div class="form-group">
+                  <label for="input-phone-number">Số điện thoại</label>
+                  <input type="text" class="form-control" id="input-phone-number" name="account-name"
+                         placeholder="Nhập số điện thoại..." value="${borrowerInfo.phone_number}"/>
+                </div>
+                <div class="form-group">
+                  <label class="font-secondary" for="input-book-code">Thêm sách</label>
+                  <div class="row">
+                    <div class="col-8">
+                      <input type="text" class="form-control" id="input-book-code"
+                             name="account-name"
+                             placeholder="Nhập mã sách..."/>
+                    </div>
+                    <div class="col-1">
+                      <button @click="${findBook}" type="button"
+                              class="btn btn-success"
+                              data-id="1">
+                        <i class="mdi mdi-magnify"></i>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                ${foundBook && alert && $h`
+                <div class="form-group">
+                  <div class="table-responsive">
+                    <table class="table table-hover ">
+                      <thead>
+                      <tr>
+                        <th>Tên sách</th>
+                        <th>Tác giả</th>
+                        <th>Mã sách</th>
+                        <th>Vị trí</th>
+                      </tr>
+                      </thead>
+                      <tbody>
+                      <tr>
+                        <td>${foundBook.name}</td>
+                        <td>${foundBook.author}</td>
+                        <td>${foundBook.code}</td>
+                        <td>${foundBook.location}</td>
+                        <td>
+                          <button @click="${() => {addBook(foundBook)}}" type="button"
+                                  class="btn btn-success btn-sm"
+                                  data-code="${foundBook.code}">
+                            <i class="mdi mdi-plus"></i>
+                          </button>
+                        </td>
+                      </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                `}
+                ${!foundBook && alertFindBook && $h`
+                <div class="form-group">
+                  <div class="alert alert-danger" role="alert">
+                    Không tìm thấy sách
+                  </div>
+                </div>
+                `}
+                <div class="form-group">
+                  <label for="">Sách mượn</label>
+                  <div class="table-responsive">
+                    <table class="table table-hover ">
+                      <thead>
+                      <tr>
+                        <th>Tên sách</th>
+                        <th>Tác giả</th>
+                        <th>Mã sách</th>
+                        <th>Vị trí</th>
+                        <th>Ngày mượn</th>
+                        <th>Hết hạn</th>
+                        <th>Gia hạn</th>
+                        <th>Phụ trách</th>
+                      </tr>
+                      </thead>
+                      <tbody>
+                      ${borrowedBooks.map(book => $h`
+                      <tr>
+                        <td>${book.name}</td>
+                        <td>${book.author}</td>
+                        <td>${book.code}</td>
+                        <td>${book.location}</td>
+                        <td>${Clm.timeConverter(book.borrowed_time)}</td>
+                        <td>${Clm.timeConverter(book.expired_time)}</td>
+                        <td>${book.extended_times}</td>
+                        <td>${book.responsible_person.name}</td>
+                        <td>
+                          <a href="/books/info/${book.code}/" class="btn btn-projects"
+                             role="button">
+                            <i class="mdi mdi-menu"></i>
+                          </a>
+                          <button @click="${deleteProject}" type="button"
+                                  class="btn btn-warning btn-sm"
+                                  data-toggle="modal" data-target="#deleteProject"
+                                  data-id="1">
+                            <i class="mdi mdi-update"></i>
+                          </button>
+                          <button @click="${deleteProject}" type="button"
+                                  class="btn btn-success btn-sm"
+                                  data-toggle="modal" data-target="#deleteProject"
+                                  data-id="1">
+                            <i class="mdi mdi-check"></i>
+                          </button>
+
+                        </td>
+                      </tr>
+                      `)}
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <button type="submit" name="create-project" value="ok" class="btn btn-success">
+                    Trả sách
+                  </button>
+                </div>
+                <div class="form-group">
+                  <button type="submit" name="create-project" value="ok" class="btn btn-success">
+                    Cập nhật
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
+      </section>
     </div>
+  </div>
 </template>
 
 <script>
-    import Clm from "../../js/clm";
+	import Clm from "../../js/clm";
 
-    export default async function (props, {
-        $f7,
-        $on,
-        $update,
-        $onBeforeMount,
-        $onMounted,
-        $onBeforeUnmount,
-        $onUnmounted
-    }) {
-        $on('pageBeforeIn', (e, page) => {
-            window.$(".js-select2").select2();
-            window.$('.datedropper').dateDropper();
-        });
+	export default async function (props, {
+		$f7,
+		$on,
+		$update,
+		$onBeforeMount,
+		$onMounted,
+		$onBeforeUnmount,
+		$onUnmounted
+	}) {
+		$on('pageBeforeIn', (e, page) => {
+			window.$(".js-select2").select2();
+			window.$('.datedropper').dateDropper();
+		});
 
-        let isSubmitSent = false;
-        let addSuccess = false;
-        let returnMessage = "";
-        let selectDate = "";
-        let borrowerInfo = {};
-        let borrowedBooks = [];
+		let isSubmitSent = false;
+		let addSuccess = false;
+		let returnMessage = "";
+		let borrowerInfo = {};
+		let borrowedBooks = [];
+		let alertFindBook = false;
+		let foundBook = null;
 
-        Clm.api(`borrowers/${props.borrowerCode}/`).then(response => {
-            console.log(response);
-            borrowerInfo = response.data.borrower_info;
-            borrowedBooks = borrowerInfo.current_borrowed_books;
-            $update();
-        });
+		Clm.api(`borrowers/${props.borrowerCode}/`).then(async response => {
+			console.log(response);
+			borrowerInfo = response.data.borrower_info;
+			borrowedBooks = borrowerInfo.current_borrowed_books;
+			console.log(borrowedBooks);
+			$update();
+		});
 
-        const submitCreation = function (e) {
-            e.preventDefault();
-            isSubmitSent = true;
-            let accountName = document.getElementById("accountName").value;
-            let accountEmail = document.getElementById("accountEmail").value;
-            let role = document.getElementById("role").value;
-            let password = Math.random().toString(36).slice(-8);
+		const submitCreation = function (e) {
+			e.preventDefault();
+			isSubmitSent = true;
 
-            if (!accountName || !accountEmail || !role) {
-                returnMessage = "Chưa điền đủ mục";
-            } else {
-                Clm.api("create_account", {
-                    fullname: accountName,
-                    email: accountEmail,
-                    password: password,
-                    role: role
-                }).then(response => {
-                    console.log(response);
-                    addSuccess = response.status;
-                    returnMessage = response.message;
+			const inputName = $('#input-name').val();
+			const inputClass = $('#input-class').val();
+			const inputStudentCode = $('#input-student-code').val();
+			const inputPhoneNumber = $('#input-phone-number').val();
+			const inputEmail = $('#input-email').val();
 
-                    $update();
-                });
-            }
-        }
-        return $render;
-    }
+			if (!inputName || !inputClass || !inputStudentCode || !inputPhoneNumber || !inputEmail || borrowedBooks.length === 0) {
+				alertSubmit = true;
+				returnMessage = "Chưa điền đủ mục";
+				$update();
+			}
+			else {
+				Clm.api('borrowers/add', {
+					name: inputName,
+					class: inputClass,
+					student_code: inputStudentCode,
+					phone_number: inputPhoneNumber,
+					email: inputEmail,
+					current_borrowed_books: borrowedBooks,
+					responsible_person: Clm.account
+				}).then(response => {
+					console.log(response);
+					returnMessage = response.message;
+					alertSubmit = true;
+          addSuccess = !response.error;
+					$update();
+				})
+			}
+		}
+
+		const findBook = function (e) {
+			const bookCode = $('#input-book-code').val();
+			Clm.api("books/" + bookCode).then(response => {
+				console.log(response);
+				if (response.error) return Clm.alert(response.error);
+				foundBook = response.data['book_details'];
+				alertFindBook = true;
+				$update();
+			});
+		}
+
+		const addBook = function (book) {
+			borrowedBooks.push(book);
+			foundBook = null;
+			alertFindBook = false;
+			$update();
+		}
+
+		const deleteBorrowedBook = function (e) {
+			const bookId = e.currentTarget.dataset.id;
+			borrowedBooks.splice(bookId, 1);
+			$update();
+		}
+		return $render;
+	}
 </script>
