fix a bunch of fucking shits

--- a/src/pages/books/add-book.f7.html
+++ b/src/pages/books/add-book.f7.html
@@ -96,7 +96,7 @@
                     location: bookLocation,
                     cost: bookCost,
                     imported_time: new Date(bookImportedDate).getTime(),
-                    responsible_person: Clm.account,
+                    responsible_person: Clm.account._id,
                     is_borrowed: false,
                     borrower: ""
                 };
